--- a/Dockerfile/nodeJS/Dockerfile
+++ b/Dockerfile/nodeJS/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /home/node/app
 RUN chown -R node:node /home/node/app
 USER node
 
-COPY . /home/node/app
 RUN yarn install
+COPY . .
 
 CMD ["yarn", "start"]
